<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/stationsRefresh"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stations">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/stationsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/stations_heading"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/stationsSpinnerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stationsHeader"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow android:layout_weight="1">
                    <TextView
                        android:layout_weight="1"
                        android:text="@string/stations_spinner_type_text"
                        android:textSize="17sp"/>
                    <Spinner
                        android:layout_weight="1"
                        android:id="@+id/stationsSpinnerType"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:visibility="invisible"/>
                </TableRow>
                <TableRow android:layout_weight="1">
                    <TextView
                        android:layout_weight="1"
                        android:text="@string/stations_spinner_states_text"
                        android:textSize="17sp"/>
                    <Spinner
                        android:layout_weight="1"
                        android:id="@+id/stationsSpinnerStates"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:visibility="invisible"/>
                </TableRow>
                <TableRow android:layout_weight="1">
                    <TextView
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:text="@string/stations_spinner_districts_text"/>
                    <Spinner
                        android:layout_weight="1"
                        android:id="@+id/stationsSpinnerDistricts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="invisible" />
                </TableRow>
                <TableRow android:layout_weight="1">
                    <TextView
                        android:textSize="17sp"
                        android:layout_weight="1"
                        android:text="@string/stations_spinner_stations_text"/>
                    <Spinner
                        android:layout_weight="1"
                        android:id="@+id/stationsSpinnerStations"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />
                </TableRow>
            </TableLayout>
        </LinearLayout>


        <androidx.core.widget.NestedScrollView
            android:id="@+id/stationsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stationsSpinnerContainer"
            android:layout_marginTop="20dp"
            android:layout_above="@id/stationsTextView"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/black">

                        <TableLayout
                            android:id="@+id/stationsTableLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="1dp"
                            android:layout_marginEnd="1dp"
                            android:layout_marginBottom="1dp"
                            android:layout_marginTop="1dp"
                            android:stretchColumns="*">

                        </TableLayout>
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/stationsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/loading_text" />


    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>